refactor: HttpResponseBody 인코딩 명시